--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "effect": "^3.19.14",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.6.0",
-    "next": "^14",
+    "next": "16.1.5",
     "npm-only-allow": "^1.2.6",
     "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.0.0",
     "react-typed": "^2.0.12",
@@ -62,14 +62,14 @@
     "@netlify/plugin-nextjs": "^5.14.7",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@vitest/coverage-v8": "^4.0.17",
     "autoprefixer": "^10.0.1",
     "cf-content-types-generator": "2.15.5",
     "dotenv": "^17.2.3",
     "eslint": "^8",
-    "eslint-config-next": "^14",
+    "eslint-config-next": "16.1.5",
     "netlify-cli": "^22.2.1",
     "postcss": "8.5.3",
     "tailwindcss": "^3",
